projects/fsi-quant-assistant/deployment/gke/adk-agent/base/deployment.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: adk-agent
  namespace: adk-agent-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adk-agent
  template:
    metadata:
      labels:
        app: adk-agent
    spec:
      serviceAccount: adk-agent-ksa
      containers:
        - name: adk-agent
          imagePullPolicy: Always
          image: adk-repo/adk-agent:latest
          resources:
            requests:
              memory: "2Gi"
              cpu: "2"
              ephemeral-storage: "2Gi"
            limits:
              memory: "16Gi"
              cpu: "8"
              ephemeral-storage: "6Gi"
              nvidia.com/gpu: "1"
          ports:
            - containerPort: 8080
      nodeSelector:
        cloud.google.com/gke-accelerator: "nvidia-tesla-t4"
